--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "angularfire2": "^5.0.0-rc.3",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "firebase": "^4.6.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
